Updated for multidimensional routes